--- a/index.html
+++ b/index.html
@@ -2564,7 +2564,7 @@ const renderPlayerTable=(team)=>{
     {/* Info text about score tracking */}
     {!recordingGoal && (
       <div className={`text-xs ${darkMode?'text-gray-400':'text-gray-600'} mb-2 text-center italic`}>
-        💡 Goal registration tracks player stats only. Update team score on main screen.
+        💡 Goal registration tracks player stats only!
       </div>
     )}
     
