--- a/index.html
+++ b/index.html
@@ -2595,7 +2595,7 @@ const renderPlayerTable=(team)=>{
       <div>
         {/* Yellow warning bar */}
         <div className="bg-yellow-400 text-gray-900 px-4 py-2 font-bold text-sm">
-          {editingGoalId ? '✏️ EDIT MODE' : '⚠️ RECORDING NEW GOAL'} - Period {currentPeriod}
+          {editingGoalId ? 'EDIT MODE' : 'NEW GOAL'} - Period {currentPeriod}
         </div>
         
         <div className="p-3 space-y-3">
