--- a/index.html
+++ b/index.html
@@ -2572,7 +2572,7 @@ const renderPlayerTable=(team)=>{
     {!recordingGoal && !isViewer && !matchEnded && (
       <button
         onClick={() => setRecordingGoal(team)}
-        className={`w-full ${darkMode?'bg-green-700 hover:bg-green-600':'bg-green-600 hover:bg-green-700'} text-white py-3 rounded-lg font-semibold text-sm flex items-center justify-center gap-2`}
+        className={`w-full ${darkMode?'bg-blue-700 hover:bg-blue-600':'bg-blue-600 hover:bg-blue-700'} text-white py-3 rounded-lg font-semibold text-sm flex items-center justify-center gap-2`}
       >
         <span>+ Add Goal</span>
       </button>
