--- a/index.html
+++ b/index.html
@@ -3010,7 +3010,7 @@ return(
       </button>
       <button
         onClick={saveGoal}
-        className="flex-1 bg-green-600 hover:bg-green-700 text-white py-3 rounded-lg font-semibold"
+        className="flex-1 bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-lg font-semibold"
       >
         {editingGoalId ? 'Update Goal' : 'Save Goal'}
       </button>
