--- a/index.html
+++ b/index.html
@@ -3012,7 +3012,7 @@ return(
         onClick={saveGoal}
         className="flex-1 bg-blue-600 hover:bg-blue-700 text-white py-3 rounded-lg font-semibold"
       >
-        {editingGoalId ? 'Update Goal' : 'Save Goal'}
+        {editingGoalId ? 'Update' : 'Save'}
       </button>
     </div>
   </div>
