--- a/index.html
+++ b/index.html
@@ -2446,7 +2446,7 @@ return(
          <button
             onClick={()=>setRecordingGoal('home')}
             className={recordingGoal==='home'
-              ?(darkMode?'bg-blue-700 border-2 border-yellow-400 text-white py-3 rounded-lg font-bold':'bg-blue-600 border-2 border-yellow-400 text-white py-3 rounded-lg font-bold')
+              ?(darkMode?'bg-blue-700 border-2 border-blue-400 text-white py-3 rounded-lg font-bold':'bg-blue-600 border-2 border-blue-400 text-white py-3 rounded-lg font-bold')
               :(darkMode?'bg-blue-900 bg-opacity-40 hover:bg-blue-700 text-white py-3 rounded-lg font-semibold':'bg-blue-200 hover:bg-blue-600 hover:text-white text-gray-800 py-3 rounded-lg font-semibold')
             }
           >
