--- a/index.html
+++ b/index.html
@@ -2455,7 +2455,7 @@ return(
           <button
             onClick={()=>setRecordingGoal('away')}
             className={recordingGoal==='away'
-              ?(darkMode?'bg-red-700 border-2 border-yellow-400 text-white py-3 rounded-lg font-bold':'bg-red-600 border-2 border-yellow-400 text-white py-3 rounded-lg font-bold')
+              ?(darkMode?'bg-red-700 border-2 border-red-400 text-white py-3 rounded-lg font-bold':'bg-red-600 border-2 border-red-400 text-white py-3 rounded-lg font-bold')
               :(darkMode?'bg-red-900 bg-opacity-40 hover:bg-red-700 text-white py-3 rounded-lg font-semibold':'bg-red-200 hover:bg-red-600 hover:text-white text-gray-800 py-3 rounded-lg font-semibold')
             }
           >
