--- a/index.html
+++ b/index.html
@@ -2532,7 +2532,10 @@ return(
 )}
 
 {playerStatsMoment==='Goal' && goalWizardStep===2 && recordingGoal && (
- 
+  <div className="p-2">
+    <div className={darkMode?'bg-gray-800 border-b border-gray-700 p-3 mb-2 rounded text-center font-bold text-white':'bg-blue-100 p-3 mb-2 rounded text-center font-bold'}>
+      Recording goal for: {recordingGoal==='home'?homeName:awayName} ({goalSituation}) {goalTime && `at ${goalTime}`}
+    </div>
     
     <div className="grid gap-2" style={{gridTemplateColumns:'2fr 1fr'}}>
       {renderPlayerTable(recordingGoal==='home'?'home':'away')}
