--- a/index.html
+++ b/index.html
@@ -2472,7 +2472,7 @@ return(
 
 
 {playerStatsMoment === 'Penalty' && (
-  <div className="max-w-2xl mx-auto p-4">
+  <div className="max-w-4xl mx-auto p-4 penalty-form">
     <div className={darkMode?'bg-gray-800 border border-gray-700 rounded-lg shadow-lg overflow-hidden':'bg-white rounded-lg shadow-lg overflow-hidden'}>
       {/* Collapsable Header */}
       <button
@@ -2682,6 +2682,20 @@ setPenaltyInfraction('');
 setPenaltyTime('');
 setPenaltyPlayer('');
 setEditingPenaltyIndex(null);
+// Collapse form, expand timeline, highlight new event
+setPenaltyFormCollapsed(true);
+setPenaltyTimelineCollapsed(false);
+const eventId = `penalty-${isEditing ? editingPenaltyIndex : penaltyEvents.length}`;
+setHighlightEventId(eventId);
+setTimeout(() => setHighlightEventId(null), 2000);
+
+// Scroll to timeline
+setTimeout(() => {
+  const timelineEl = document.querySelector('.penalty-timeline');
+  if(timelineEl) {
+    timelineEl.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
+  }
+}, 100);
 }}
           disabled={!penaltyTeam || !penaltyPlayer}
           className={penaltyTeam && penaltyPlayer
@@ -2700,7 +2714,7 @@ setEditingPenaltyIndex(null);
 
 
 {playerStatsMoment==='Goal' && goalWizardStep===1 && (
-  <div className="max-w-2xl mx-auto p-4">
+  <div className="max-w-4xl mx-auto p-4 goal-form">
     <div className={darkMode?'bg-gray-800 border border-gray-700 rounded-lg shadow-lg overflow-hidden':'bg-white rounded-lg shadow-lg overflow-hidden'}>
 
       <button
@@ -3039,23 +3053,34 @@ setTimeout(() => {
 >
                 <div className="flex items-start justify-between gap-2">
                   <div className="flex-1">
-                    <div className="font-bold mb-1">
-                      {(() => {
-                        const homeGoals = goalEvents.slice(0, idx + 1).filter(e => e.team === 'home').length;
-                        const awayGoals = goalEvents.slice(0, idx + 1).filter(e => e.team === 'away').length;
-                        return `${homeGoals}-${awayGoals} ${event.team === 'home' ? homeName : awayName}`;
-                      })()}
-                    </div>
-                    <div className={darkMode?'text-sm text-gray-300':'text-sm text-gray-600'}>
-                      <div>Period {event.period} • {event.situation} {event.time&&`• ${event.time}`}</div>
-                      {event.scorers && event.scorers.length>0 && (
-  <div>G: {event.scorers.map(id=>id.split('-')[1]).join(', ')}</div>
+ <div className="font-bold mb-1">
+  {(() => {
+    const homeGoals = goalEvents.slice(0, idx + 1).filter(e => e.team === 'home').length;
+    const awayGoals = goalEvents.slice(0, idx + 1).filter(e => e.team === 'away').length;
+    const teamName = event.team === 'home' ? homeName : awayName;
+    
+    return (
+      <>
+        {event.team === 'home' ? (
+  <><span className="font-extrabold text-blue-500">{homeGoals}</span>-{awayGoals}</>
+) : (
+  <>{homeGoals}-<span className="font-extrabold text-blue-500">{awayGoals}</span></>
 )}
-{event.assists && event.assists.length>0 && (
-  <div>A: {event.assists.map(id=>id.split('-')[1]).join(', ')}</div>
-)}
-                    </div>
-                  </div>
+        {' '}{teamName}
+      </>
+    );
+  })()}
+</div>
+  <div className={darkMode?'text-sm text-gray-300':'text-sm text-gray-600'}>
+    <div>
+      {event.time && `${event.time} • `}Period {event.period} • {event.situation}
+    </div>
+    <div>
+      {event.scorers && event.scorers.length > 0 && `G: #${event.scorers.map(id=>id.split('-')[1]).join(', #')} `}
+      {event.assists && event.assists.length > 0 && `A: #${event.assists.map(id=>id.split('-')[1]).join(', #')}`}
+    </div>
+  </div>
+</div>
                   <div className="flex gap-1">
                     <button
                       onClick={()=>{
@@ -3070,6 +3095,14 @@ setTimeout(() => {
                         setGoalMinusPlayers(event.minus||[]);
                         setGoalSOGPlayers(event.sog||[]);
                         setGoalWizardStep(1);
+                        setGoalFormCollapsed(false);
+                            setGoalTimelineCollapsed(true);
+                            setTimeout(() => {
+                              const formEl = document.querySelector('.goal-form');
+                              if(formEl) {
+                                formEl.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                              }
+                            }, 100);
                       }}
                       className={darkMode?'bg-blue-700 hover:bg-blue-600 text-white px-2 py-1 rounded text-xs font-semibold':'bg-blue-600 hover:bg-blue-700 text-white px-2 py-1 rounded text-xs font-semibold'}
                     >
@@ -3169,37 +3202,43 @@ setTimeout(() => {
 
 
 {playerStatsMoment === 'Penalty' && penaltyEvents.length > 0 && (
-  <div className="max-w-4xl mx-auto mt-4 p-2">
+  <div className="max-w-4xl mx-auto mt-4 p-2 penalty-timeline">
     <div className={darkMode?'bg-gray-800 border border-gray-700 rounded-lg overflow-hidden':'bg-white rounded-lg shadow-lg overflow-hidden'}>
       <button
-        onClick={()=>setExpandedPlayerStats(prev=>({...prev,penaltySummary:!prev.penaltySummary}))}
-        className={darkMode?'w-full bg-gray-700 hover:bg-gray-600 text-white px-4 py-3 font-bold flex items-center justify-between':'w-full bg-blue-600 hover:bg-blue-700 text-white px-4 py-3 font-bold flex items-center justify-between'}
+        onClick={()=>setPenaltyTimelineCollapsed(!penaltyTimelineCollapsed)}
+        className={`w-full ${darkMode?'bg-gradient-to-r from-blue-700 to-blue-600':'bg-gradient-to-r from-blue-600 to-blue-800'} text-white px-4 py-3 font-bold flex items-center justify-between transition-colors hover:opacity-90`}
       >
-        <span>Penalty - Timeline </span>
-        <span>{expandedPlayerStats.penaltySummary?<IconChevronUp />:<IconChevronDown />}</span>
+        <span>Penalty - Timeline</span>
+        <span className={`transition-transform duration-300 ${penaltyTimelineCollapsed ? '' : 'rotate-180'}`}>
+          <IconChevronDown />
+        </span>
       </button>
       
-      {expandedPlayerStats.penaltySummary && (
+      {!penaltyTimelineCollapsed && (
         <div className="p-3">
           <div className="space-y-2">
             {[...penaltyEvents].reverse().map((event,reverseIdx)=>{
               const idx=penaltyEvents.length-1-reverseIdx;
               const teamName = event.team === 'home' ? homeName : awayName;
               return(
-                <div key={idx} className={darkMode?'bg-gray-700 border border-gray-600 rounded p-3':'bg-gray-50 border border-gray-200 rounded p-3'}>
+                <div 
+  key={idx} 
+  className={`${darkMode?'bg-gray-700 border border-gray-600':'bg-gray-50 border border-gray-200'} rounded p-3 transition-all duration-500 ${
+    highlightEventId === `penalty-${idx}` ? 'ring-2 ring-yellow-400 shadow-lg' : ''
+  }`}
+  style={highlightEventId === `penalty-${idx}` ? {animation: 'pulse 1s ease-in-out'} : {}}
+>
                   <div className="flex items-start justify-between gap-2">
                     <div className="flex-1">
-                      <div className="font-bold mb-1">
-                        {teamName} - #{event.player} - {event.penaltyType}
-                      </div>
-                      <div className={darkMode?'text-sm text-gray-300':'text-sm text-gray-600'}>
-                        <div>
-                          Period {event.period}
-                          {event.infraction && ` • ${event.infraction}`}
-                          {event.time && ` • ${event.time}`}
-                        </div>
-                      </div>
-                    </div>
+  <div className="font-bold mb-1">
+    {event.penaltyType.replace("'", " min")} Penalty - {teamName}
+  </div>
+  <div className={darkMode?'text-sm text-gray-300':'text-sm text-gray-600'}>
+    <div>
+      {event.time && `${event.time} • `}Period {event.period}{event.infraction && ` • ${event.infraction}`} #{event.player === 'BENCH' ? 'Bench' : event.player}
+    </div>
+  </div>
+</div>
                     <div className="flex gap-1">
                       <button
                         onClick={()=>{
@@ -3211,6 +3250,14 @@ setTimeout(() => {
                           setPenaltyTime(event.time||'');
                           setPenaltyPlayer(event.player);
                           setPenaltyWizardOpen(true);
+                          setPenaltyFormCollapsed(false);
+                              setPenaltyTimelineCollapsed(true);
+                              setTimeout(() => {
+                                const formEl = document.querySelector('.penalty-form');
+                                if(formEl) {
+                                  formEl.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                                }
+                              }, 100);
                         }}
                         className={darkMode?'bg-blue-700 hover:bg-blue-600 text-white px-2 py-1 rounded text-xs font-semibold':'bg-blue-600 hover:bg-blue-700 text-white px-2 py-1 rounded text-xs font-semibold'}
                       >
