--- a/index.html
+++ b/index.html
@@ -2472,7 +2472,8 @@ return(
 
 
 {playerStatsMoment === 'Penalty' && (
-  <div className="max-w-4xl mx-auto p-4 penalty-form">
+  
+<div className="max-w-4xl mx-auto penalty-form">
     <div className={darkMode?'bg-gray-800 border border-gray-700 rounded-lg shadow-lg overflow-hidden':'bg-white rounded-lg shadow-lg overflow-hidden'}>
       {/* Collapsable Header */}
       <button
@@ -2714,7 +2715,8 @@ setTimeout(() => {
 
 
 {playerStatsMoment==='Goal' && goalWizardStep===1 && (
-  <div className="max-w-4xl mx-auto p-4 goal-form">
+  <div className="max-w-4xl mx-auto goal-form">
+
     <div className={darkMode?'bg-gray-800 border border-gray-700 rounded-lg shadow-lg overflow-hidden':'bg-white rounded-lg shadow-lg overflow-hidden'}>
 
       <button
